// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReasonFound should load ExplainCollectionInterval component 1`] = `
Array [
  <h2
    class="euiTitle euiTitle--large"
  >
    Monitoring is currently off
  </h2>,
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <p>
        Monitoring provides insight to your hardware performance and load.
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
  />,
  <div
    class="euiText euiText--medium"
  >
    <p>
      We checked the cluster settings and found that 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          xpack.monitoring.collection.interval
        </code>
      </span>
       is set to 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          -1
        </code>
      </span>
      .
    </p>
    <p>
      The collection interval setting needs to be a positive integer (10s is recommended) in order for the collection agents to be active.
    </p>
    <p>
      Would you like us to change it and enable monitoring?
    </p>
  </div>,
  <div
    class="euiSpacer euiSpacer--l"
  />,
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary euiButton--fill"
        data-test-subj="enableCollectionInterval"
        type="button"
      >
        <span
          class="euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Turn on monitoring
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`ReasonFound should load ExplainExporters component 1`] = `
Array [
  <h2
    class="euiTitle euiTitle--large"
  >
    You need to make some adjustments
  </h2>,
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <p>
        To run monitoring please perform the following steps
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
  />,
  <div
    class="euiText euiText--medium eui-textLeft"
  >
    <p>
      We checked the 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          node001foo
        </code>
      </span>
       settings for 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          xpack.monitoring.exporters
        </code>
      </span>
      , and found the reason: 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          myMonitoringClusterExporter1
        </code>
      </span>
      .
    </p>
    <p>
      Using monitoring exporters to ship the monitoring data to a remote monitoring cluster is highly recommended as it keeps the integrity of the monitoring data safe no matter what the state of the production cluster. However, as this instance of Kibana could not find any monitoring data, there seems to be a problem with the 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          xpack.monitoring.exporters
        </code>
      </span>
       configuration, or the 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          xpack.monitoring.elasticsearch
        </code>
      </span>
       settings in 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          kibana.yml
        </code>
      </span>
      .
    </p>
    <p>
      Check that the intended exporters are enabled for sending statistics to the monitoring cluster, and that the monitoring cluster host matches the 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          xpack.monitoring.elasticsearch
        </code>
      </span>
       setting in 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          kibana.yml
        </code>
      </span>
       to see monitoring data in this instance of Kibana.
    </p>
  </div>,
]
`;

exports[`ReasonFound should load ExplainExportersCloud component 1`] = `
Array [
  <h2
    class="euiTitle euiTitle--large"
  >
    Your monitoring data is not available here.
  </h2>,
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiText euiText--medium"
    >
      <p>
        Please return to your 
        <a
          class="euiLink euiLink--primary"
          href="https://cloud.elastic.co/deployments"
          rel="noopener"
          target="_blank"
        >
          cloud dashboard.
        </a>
         For more information on Monitoring in Elastic Cloud, please see 
        <a
          class="euiLink euiLink--primary"
          href="https://www.elastic.co/guide/en/cloud/current/ec-enable-monitoring.html"
          rel="noopener"
          target="_blank"
        >
          the documentation.
        </a>
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
  />,
  <div
    class="euiText euiText--medium eui-textLeft"
  >
    <p>
      In Elastic Cloud, your monitoring data is stored in your dedicated monitoring cluster.
    </p>
  </div>,
]
`;

exports[`ReasonFound should load ExplainPluginEnabled component 1`] = `
Array [
  <h2
    class="euiTitle euiTitle--large"
  >
    You need to make some adjustments
  </h2>,
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <p>
        To run monitoring please perform the following steps
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
  />,
  <div
    class="euiText euiText--medium"
  >
    <p>
      We checked the node001foo settings and found that 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          xpack.monitoring.enabled
        </code>
      </span>
       is set to 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          false
        </code>
      </span>
       set, which disables monitoring. Removing the 
      <span
        class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--inline"
      >
        <code
          class="euiCodeBlock__code"
        >
          xpack.monitoring.enabled: false
        </code>
      </span>
       setting from your configuration will put the default into effect and enable Monitoring.
    </p>
  </div>,
]
`;
